# Bijectorch

./: LICENSE  README.md  pyproject.toml
src/bijectorch/: __init__.py
src/bijectorch/bijectors/: affine.py  bijector.py  chain.py  coupling.py  inverse.py  rational_quadratic_spline.py
src/bijectorch/distributions/: transformed.py
