
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BijecTorch"
version = "0.0.0"
description = "Bijectors (differentiable and bijective functions) in PyTorch "
readme = "README.md"
authors = [{ name = "Simon Schnake", email = "last name dot first name at gmail com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Deep Learning", "Bayesian Inference", "Statistical Modeling", "Variational Inference", "PyTorch", "Normalizing Flows"]
dependencies = ["torch", 'tomli; python_version < "3.11"']
requires-python = ">=3.9"

    [project.optional-dependencies]
    dev   = ["black", "isort", "mypy", "pytest"]


    [project.urls]
    repository    = "https://github.com/simonschnake/BijecTorch"
